--- a/src/scss/layout/sections/section-help.scss
+++ b/src/scss/layout/sections/section-help.scss
@@ -275,6 +275,7 @@
 @include respond-to($sm) {
   .diagnoses-list {
     flex-wrap: wrap;
+    margin: 0;
 
     &__title {
       font-size: 28px;
@@ -295,7 +296,7 @@
       padding: 20px 15px;
       height: 104px;
       width: 100%;
-      margin-bottom: 10px;
+      margin:0 0 10px;
 
       &:before {
         height: 100%;
