add content pages

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -11,7 +11,7 @@ body {
   &:before {
     position: absolute;
     content: '';
-    background: linear-gradient(to top, #fbf7fd 0%, rgba(251, 247, 253, 0) 40%),
+    background: linear-gradient(to top, #f5f7f7 0%, rgba(251, 247, 253, 0) 40%),
     url(../assets/img/bg-soty.png);
     background-repeat: no-repeat;
     background-position: center 0;
@@ -39,7 +39,6 @@ body {
   min-height: 100%;
   display: flex;
   flex-direction: column;
-  overflow: hidden;
 }
 
 .main {
