--- a/src/scss/layout/sections/section-banner.scss
+++ b/src/scss/layout/sections/section-banner.scss
@@ -36,7 +36,7 @@
     max-width: 670px;
     font-size: 64px;
     font-weight: 700;
-    color: $blue;
+    color: $blue-100;
     line-height: 1;
     margin-bottom: 60px;
     text-shadow: 0 4px 15px rgba(134, 200, 234, 0.25);
