add card responsive section help

--- a/src/scss/pages/page-composition.scss
+++ b/src/scss/pages/page-composition.scss
@@ -268,7 +268,7 @@
     &.active {
       background: #F3F8FB;
       border-color: #25A3E5;
-      color: $blue;
+      color: $blue-100;
       font-weight: 700;
     }
   }
@@ -281,7 +281,7 @@
 
     h5 {
       margin-bottom: 26px;
-      color: $blue;
+      color: $blue-100;
     }
 
     .tab-content {
