--- a/src/scss/pages/page.scss
+++ b/src/scss/pages/page.scss
@@ -5,6 +5,7 @@
   &__heading {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
     max-width: 1269px;
     margin: 0 auto 120px;
     width: 100%;
@@ -12,10 +13,45 @@
     border-radius: 15px;
     min-height: 184px;
     padding: 47px 47px 47px 105px;
+    overflow: hidden;
 
     @supports (backdrop-filter: none) {
       &.frosted {
         backdrop-filter: blur(5px);
+      }
+    }
+
+    .toggle-content {
+      position: relative;
+      width: 100%;
+      margin-top: 60px;
+      padding-top: 38px;
+      margin-bottom: 0;
+
+      &:before {
+        position: absolute;
+        content: '';
+        display: block;
+        background-color: #ffffff;
+        height: 1px;
+        width: 150vw;
+        left: 50%;
+        transform: translateX(-50%);
+        top: 0;
+      }
+
+      .btn {
+        border: none;
+        padding: 10px 10px 21px;
+      }
+
+      .block-more-info {
+        padding-top: 7px;
+        padding-bottom: 50px;
+
+        &:before {
+          display: none;
+        }
       }
     }
   }
@@ -27,6 +63,9 @@
     color: $blue-100;
     line-height: 1;
     flex-shrink: 0;
+    min-height: 90px;
+    display: inline-flex;
+    align-items: center;
 
     &:before {
       position: absolute;
@@ -39,6 +78,10 @@
       background-color: $blue-100;
       z-index: 1;
     }
+  }
+
+  &__sub-title {
+    width: 67%;
   }
 
   .link-back {
@@ -59,6 +102,7 @@
       }
     }
   }
+
 
   @include respond-to($lg) {
     &__heading {
@@ -82,8 +126,7 @@
       min-height: 52px;
       padding: 0;
       margin-bottom: 25px;
-      display: inline-flex;
-      align-items: center;
+
       &:before {
         width: 4px;
         height: 50px;
@@ -98,10 +141,11 @@
       display: block;
       margin-bottom: 25px;
     }
-    &__title{
+    &__title {
       padding-left: 14px;
       margin-bottom: 14px;
-      &:before{
+
+      &:before {
         left: 0;
       }
     }
