--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -170,7 +170,7 @@ body {
     width: 65px;
     height: 86px;
     right: 0;
-    bottom: 28px;
+    bottom: 14vh;
     top: auto;
     .buy {
       display: none;
