--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -116,7 +116,8 @@
   }
   @include respond-to($sm) {
     .disclaimer{
-      padding-top: 0;
+      padding-top: 10px;
+      height: 17vh;
     }
   }
   @include respond-to($xs) {
