--- a/src/scss/components/_widget-share.scss
+++ b/src/scss/components/_widget-share.scss
@@ -6,7 +6,7 @@
   top: 410px;
   width: 32px;
   padding: 4px;
-  background-color: #E5E5E5;
+  background-color: transparent;
   z-index: 20;
 
   .inner-info {
