--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -8,6 +8,7 @@
   url('Calibri-Bold.ttf') format('truetype');
   font-weight: 700;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -20,4 +21,5 @@
   url('Calibri.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
