--- a/src/scss/layout/sections/section-slider.scss
+++ b/src/scss/layout/sections/section-slider.scss
@@ -110,6 +110,9 @@
     }
   }
   @include respond-to($lg) {
+    .about-urolesan{
+      padding-bottom: 0;
+    }
     .wrapper-slider {
       min-height: 500px;
     }
@@ -129,6 +132,7 @@
   }
   @include respond-to($md) {
     padding-top: 0;
+
     &:before {
       display: none;
     }
