--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,8 @@
 @import 'utils/variables';
 @import 'utils/mixins';
 
+@import '../lib/swiper/swiper-bundle.min';
+
 @import 'base/reset';
 @import 'base/base';
 @import 'base/typography';
