fix fz menu and slider reason, speed slider index

--- a/src/scss/components/_prevention__list.scss
+++ b/src/scss/components/_prevention__list.scss
@@ -2,7 +2,7 @@
   position: relative;
   background-image: url(../assets/img/prevention.jpg);
   background-repeat: no-repeat;
-  background-position: 0;
+  background-position: top;
   background-size: cover;
   color: #ffffff;
   padding: 53px 0 70px;
