--- a/src/scss/layout/sections/consequences.scss
+++ b/src/scss/layout/sections/consequences.scss
@@ -97,7 +97,7 @@
     border: 1px solid #ffffff;
     color: #ffffff;
     margin: 0 17px 50px;
-
+text-shadow: none;
     &:before,
     &:after {
       position: absolute;
