--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -2,11 +2,13 @@
   display: flex;
   justify-content: center;
   width: 100%;
-  font-size: 16px;
+  font-size: 18px;
+  align-items: center;
   line-height: 1;
   color: $black-blue;
   &__item {
     padding: 5px 22px;
+    text-align: center;
   }
 
   &__link {
