--- a/src/scss/layout/sections/consequences.scss
+++ b/src/scss/layout/sections/consequences.scss
@@ -108,7 +108,7 @@ text-shadow: none;
 
     &:before {
       right: -35px;
-      //background-color: rgba(255,255,255,.5);
+      background-color: rgba(255,255,255,.5);
       width: 35px;
       height: 1px;
     }
