--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -83,6 +83,13 @@
     color: $blue-100;
   }
 
+  .design {
+    a:hover,
+    a:focus {
+      text-decoration: underline;
+    }
+  }
+
   .disclaimer {
     background-size: cover;
     overflow: hidden;
@@ -115,7 +122,7 @@
     }
   }
   @include respond-to($sm) {
-    .disclaimer{
+    .disclaimer {
       padding-top: 10px;
       height: 17vh;
     }
