--- a/src/scss/components/_prevention__list.scss
+++ b/src/scss/components/_prevention__list.scss
@@ -1,9 +1,9 @@
 .prevention {
   position: relative;
-  background-image: url(../assets/img/prevention.jpg);
-  background-repeat: no-repeat;
+  background-image: url(../assets/img/prevention.png);
+  background-repeat: repeat-y;
   background-position: top;
-  background-size: cover;
+  background-size: contain;
   color: #ffffff;
   padding: 53px 0 70px;
 
